--- a/ChatServer/ChatServer.csproj
+++ b/ChatServer/ChatServer.csproj
@@ -54,9 +54,10 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Client.cs" />
-    <Compile Include="MessageRecievedEventArgs.cs" />
+    <Compile Include="NetworkEventArgs\MessageRecievedEventArgs.cs" />
+    <Compile Include="NetworkEventArgs\UserJoinedEventArgs.cs" />
+    <Compile Include="Server.cs" />
     <Compile Include="User.cs" />
-    <Compile Include="UserJoinedEventArgs.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
