--- a/ChatServer/ChatServer.csproj
+++ b/ChatServer/ChatServer.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Client.cs" />
     <Compile Include="NetworkEventArgs\ErrorEventArgs.cs" />
     <Compile Include="NetworkEventArgs\MessageRecievedEventArgs.cs" />
+    <Compile Include="NetworkEventArgs\PacketEventArgs.cs" />
     <Compile Include="NetworkEventArgs\ServerErrorEventArgs.cs" />
     <Compile Include="NetworkEventArgs\UserJoinedEventArgs.cs" />
     <Compile Include="Server.cs" />
