--- a/ChatServer/ChatServer.csproj
+++ b/ChatServer/ChatServer.csproj
@@ -54,6 +54,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Client.cs" />
+    <Compile Include="MessageRecievedEventArgs.cs" />
     <Compile Include="NetworkEventArgs\ErrorEventArgs.cs" />
     <Compile Include="NetworkEventArgs\MessageRecievedEventArgs.cs" />
     <Compile Include="NetworkEventArgs\PacketEventArgs.cs" />
