--- a/ChatServer/ChatServer.csproj
+++ b/ChatServer/ChatServer.csproj
@@ -34,6 +34,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="mysql.data">
+      <HintPath>C:\Users\Timo\Desktop\uselsscrap\FagNet\mysql.data.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
@@ -54,6 +57,8 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Client.cs" />
+    <Compile Include="MySql\Database.cs" />
+    <Compile Include="MySql\Gamedatabase.cs" />
     <Compile Include="NetworkEventArgs\ErrorEventArgs.cs" />
     <Compile Include="NetworkEventArgs\MessageRecievedEventArgs.cs" />
     <Compile Include="NetworkEventArgs\PacketEventArgs.cs" />
